--- a/CSS.css
+++ b/CSS.css
@@ -34,12 +34,12 @@ body{
 .footer{
     grid-area: footer;
 }
-
+/*Columnas y Filas*/
 .grid-container{
     display: grid;
     gap: 10px;
-    grid-template-columns: 100px auto;
-    grid-template-rows: 200px auto 400px;
+    grid-template-columns: 150px auto;
+    grid-template-rows: 100px auto 500px;
     grid-template-areas: 
     "navbar header"
     "navbar main"
@@ -47,3 +47,53 @@ body{
     "footer footer";
 }
 
+.usuario-img{
+    height: 50px;
+    width: 50px;
+}
+.div-usuario{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    gap: 20px;
+}
+.fa-regular{
+    font-size: 30px;
+}
+
+/*Main*/
+.main{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+
+/*Navbar*/
+.navbar{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: start;
+    align-items: flex-start ;
+}
+.navbar-item{
+    display: flex;
+    gap: 5px;  
+    font-size: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.fa-house{
+    color: blue;
+}
+
+.fa-envelope-nav{
+    color: green;
+}
+
+.fa-share-from-square{
+    color: aqua;
+}
